--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-Flask
-Werkzeug
-mammoth
-beautifulsoup4
-lxml
+beautifulsoup4==4.13.4
+blinker==1.9.0
+click==8.2.0
+cobble==0.1.4
+Flask==3.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+lxml==5.4.0
+mammoth==1.9.0
+MarkupSafe==3.0.2
+soupsieve==2.7
+typing_extensions==4.13.2
+Werkzeug==3.1.3
